Fixed vh on mobile

--- a/src/scss/Includes/_features-block.scss
+++ b/src/scss/Includes/_features-block.scss
@@ -21,7 +21,7 @@
     @include desktop {
       display: block;
       min-height: 450px;
-      transform: scale(1.2);
+      // transform: scale(1.2);
     }
   }
   &__top-row {
